# PolyglotAlgos

binary_search/: pduedo-binary-search.md
binary_search/c/: binary_search.c
binary_search/cpp/: CMakeLists.txt
binary_search/cpp/include/: custom_binary_search.h  read_arrays_from_db.h
binary_search/cpp/src/: read_arrays_from_db.cpp
binary_search/cpp/tests/: binary_search_gTest.cpp
binary_search/test_data/: Manifest.toml  Project.toml  arrays.db  gen_arrays.jl
